Fix T83372: Point.select can be True when unselected